Created table to list products

--- a/src/app/components/product-list/product-list.component.html
+++ b/src/app/components/product-list/product-list.component.html
@@ -1,4 +1,4 @@
 <p *ngFor="let product of products">
     <!-- formatting with currency pipe -->
-    {{ product.name }} {{ product.unitPrice | currency:"USD"}}
+    {{ product.name }} : {{ product.unitPrice | currency:"USD"}}
 </p>
