--- a/src/app/components/product-list/product-list-table.component.html
+++ b/src/app/components/product-list/product-list-table.component.html
@@ -1,13 +1,17 @@
 <table class="table border-dark table-bordered">
     <thead class="table-dark text-center">
         <tr>
+           <th></th>
            <th>Name</th>
            <th>Price</th>
            <th>Units in Stock</th>
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let product of products" class="text-center">
+        <tr *ngFor="let product of products" class="text-center align-middle">
+            <td>
+                <img src="{{ product.imageUrl }}" alt="product.png" height="50">
+            </td>
             <td>{{ product.name }}</td>
             <td>{{ product.unitPrice | currency:"USD"}}</td>
             <td>{{ product.unitsInStock }}</td>
