--- a/src/app/components/product-list/product-list-grid.component.html
+++ b/src/app/components/product-list/product-list-grid.component.html
@@ -1,20 +1,20 @@
-<table class="table border-dark table-bordered">
-    <thead class="thead-dark text-center">
-        <tr>
-           <th></th>
-           <th>Name</th>
-           <th>Price</th>
-           <th>Units in Stock</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let product of products" class="text-center align-middle">
-            <td>
-                <img src="{{ product.imageUrl }}" alt="product.png" height="50">
-            </td>
-            <td>{{ product.name }}</td>
-            <td>{{ product.unitPrice | currency:"USD"}}</td>
-            <td>{{ product.unitsInStock }}</td>
-        </tr>
-    </tbody>
-</table>
+<div class="main-content">
+    <div class="section-content section-content p-30">
+        <div class="container-fluid">
+            <div class="row">
+                <!-- loop over product items -->
+                <div *ngFor="let product of products" class="col-md-3">
+                      <div class="product-box">
+                          <img src="{{ product.imageUrl }}" alt="{{ product.name }}.png" class="img-responsive">
+                          <h1>{{ product.name }}</h1>
+                          <div class="price">
+                              <!-- currency pipe formatting -->
+                              {{ product.unitPrice | currency:"USD" }}
+                          </div>
+                          <a href="#" class="primary-btn">Add to Cart</a>
+                      </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
