--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,13 +10,14 @@
       <nav class="navbar-sidebar">
         <ul class="list-unstyled navbar-list">
           <li>
-            <a href="#">Books</a>
+            <a routerLink="/category/1" routerLinkActive="active-link">Books</a>
           </li>
           <li>
-            <a href="#">Coffee Mugs</a>
+            <!-- /category/:id is the route. Based on Routes configuration. Once user clicks link, active-link CSS class is activated -->
+            <a routerLink="/category/1" routerLinkActive="active-link">Coffee Mugs</a>
           </li>
           <li>
-            <a href="#">Mouse Pads</a>
+            <a routerLink="/category/2" routerLinkActive="active-link">Mouse Pads</a>
           </li>
           <li>
             <a href="#">Luggage Tags</a>
@@ -53,7 +54,7 @@
     <!-- END HEADER DESKTOP-->
 
     <!-- MAIN CONTENT: PRODUCTS -->
-    <app-product-list></app-product-list>
+    <router-outlet></router-outlet>
     </div>
 </div>
 <!-- END MENU SIDEBAR-->
