--- a/src/app/components/product-list/product-list-grid.component.html
+++ b/src/app/components/product-list/product-list-grid.component.html
@@ -16,6 +16,11 @@
                           <a href="#" class="primary-btn">Add to Cart</a>
                       </div>
                 </div>
+                <!-- if products are empty display a message. role --- provides info to assistive tech such as screen readers -->
+                <!-- Safe navigation operator (?) guards against null and undefined values in property paths -->
+                <div *ngIf="products?.length == 0" class="alert alert-warning bg-primary" role="alert">
+                    <h3 class="text-center text-light">No products found</h3>
+                </div>
             </div>
         </div>
     </div>
