--- a/src/app/components/product-list/product-list-grid.component.html
+++ b/src/app/components/product-list/product-list-grid.component.html
@@ -7,8 +7,12 @@
                 <!-- loop over product items -->
                 <div *ngFor="let product of products" class="col-md-3">
                       <div class="product-box">
-                          <img src="{{ product.imageUrl }}" alt="{{ product.name }}.png" class="img-responsive">
-                          <h1>{{ product.name }}</h1>
+                          <a routerLink="/products/{{ product.id }}">
+                              <img src="{{ product.imageUrl }}" alt="{{ product.name }}.png" class="img-responsive">
+                          </a>
+                          <a routerLink="/products/{{ product.id }}">
+                              <h1>{{ product.name }}</h1>
+                          </a>
                           <div class="price">
                               <!-- currency pipe formatting -->
                               {{ product.unitPrice | currency:"USD" }}
