--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -1,5 +1,17 @@
 <div class="detail-section">
     <div class="container-fluid">
-        <p style="margin-top: 100px;">Product Details</p>
+         <!-- detail-img: from styles.css -->
+        <img src="{{ product.imageUrl }}" alt="{{ product.name }}.png" class="detail-img">
+        <h3>{{ product.name }}</h3>
+        <div class="price">
+            {{ product.unitPrice | currency:"USD" }}
+        </div>
+        <a href="#" class="primary-btn">Add to Cart</a>
+        <hr>
+        <h4>Description:</h4>
+        <p>{{ product.description }}</p>
+        <a routerLink="/products" class="mt-5">
+            Back to Product List
+        </a>
     </div>
 </div>
