Styled product details to be displayed in center of page

--- a/src/app/components/product-details/product-details.component.html
+++ b/src/app/components/product-details/product-details.component.html
@@ -1,5 +1,5 @@
 <div class="detail-section">
-    <div class="container-fluid">
+    <div class="container-fluid text-center">
          <!-- detail-img: from styles.css -->
         <img src="{{ product.imageUrl }}" alt="{{ product.name }}.png" class="detail-img">
         <h3>{{ product.name }}</h3>
