--- a/src/app/components/product-list/product-list-table.component.html
+++ b/src/app/components/product-list/product-list-table.component.html
@@ -8,7 +8,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor="let product of products" class="text-center align-middle">
+        <tr *ngFor="let product of products" class="text-center">
             <td>
                 <img src="{{ product.imageUrl }}" alt="product.png" height="50">
             </td>
