Removed bottom whitespace from footer

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,8 +36,8 @@
 <!-- END MENU SIDEBAR-->
 
 <!-- FOOTER -->
-<footer>
-  <ul>
+<footer class="h-50">
+  <ul class="mb-0 h-50">
     <li><a href="#">About Us</a></li>
     <li><a href="#">Contact Us</a></li>
     <li><a href="#">Help</a></li>
