--- a/src/app/components/product-list/product-list-grid.component.html
+++ b/src/app/components/product-list/product-list-grid.component.html
@@ -21,7 +21,7 @@
               <!-- currency pipe formatting -->
               {{ product.unitPrice | currency : "USD" }}
             </div>
-            <a href="#" class="primary-btn">Add to Cart</a>
+            <button (click)="addToCart(product)" class="btn btn-primary btn-sm">Add to Cart</button>
           </div>
         </div>
         <!-- if products are empty display a message. role --- provides info to assistive tech such as screen readers -->
