--- a/src/app/components/cart-details/cart-details.component.html
+++ b/src/app/components/cart-details/cart-details.component.html
@@ -1,1 +1,13 @@
-<p>cart-details works!</p>
+<div class="main-content">
+  <div class="section-content section-content-p30">
+    <div class="container-fluid">
+      <table class="table table-bordered">
+        <tr>
+          <th style="width: 20%;">Product Image</th>
+          <th style="width: 50%;">Product Detail</th>
+          <th style="width: 30%;"></th>
+        </tr>
+      </table>
+    </div>
+  </div>
+</div>
