--- a/src/app/components/cart-details/cart-details.component.html
+++ b/src/app/components/cart-details/cart-details.component.html
@@ -3,9 +3,31 @@
     <div class="container-fluid">
       <table class="table table-bordered">
         <tr>
-          <th style="width: 20%;">Product Image</th>
-          <th style="width: 50%;">Product Detail</th>
-          <th style="width: 30%;"></th>
+          <th style="width: 20%">Product Image</th>
+          <th style="width: 50%">Product Detail</th>
+          <th style="width: 30%"></th>
+        </tr>
+        <tr *ngFor="let cartItem of cartItems">
+          <td>
+            <img
+              src="{{ cartItem.imageUrl }}"
+              alt="{{ cartItem.name }}.png"
+              class="img-responsive"
+              width="15"
+            />
+          </td>
+          <td>
+            <p>{{ cartItem.name }}</p>
+          </td>
+          <td>
+            <p>{{ cartItem.unitPrice | currency:"USD" }}</p>
+          </td>
+          <td>
+            <div class="items">
+              <label>Quantity:</label>
+              {{ cartItem.quantity}}
+            </div>
+          </td>
         </tr>
       </table>
     </div>
