--- a/src/app/components/cart-details/cart-details.component.html
+++ b/src/app/components/cart-details/cart-details.component.html
@@ -1,32 +1,45 @@
 <div class="main-content">
   <div class="section-content section-content-p30">
     <div class="container-fluid">
-      <table class="table table-bordered">
-        <tr>
-          <th style="width: 20%">Product Image</th>
-          <th style="width: 50%">Product Detail</th>
-          <th style="width: 30%"></th>
+      <table
+        class="table table-bordered text-center"
+        style="border: 2px solid #ccc"
+      >
+        <tr style="border: 2px solid #ccc">
+          <th style="width: 20%; border: 2px solid #ccc">Product Image</th>
+          <th style="width: 50%; border: 2px solid #ccc">Product Detail</th>
+          <th style="width: 30%; border: 2px solid #ccc"></th>
         </tr>
-        <tr *ngFor="let cartItem of cartItems">
-          <td>
+        <tr *ngFor="let cartItem of cartItems" style="border: 2px solid #ccc">
+          <td style="border: 2px solid #ccc">
             <img
               src="{{ cartItem.imageUrl }}"
               alt="{{ cartItem.name }}.png"
               class="img-responsive"
-              width="15"
+              width="150px"
             />
           </td>
-          <td>
+          <td style="border: 2px solid #ccc">
             <p>{{ cartItem.name }}</p>
+            <p>{{ cartItem.unitPrice | currency : "USD" }}</p>
           </td>
-          <td>
-            <p>{{ cartItem.unitPrice | currency:"USD" }}</p>
-          </td>
-          <td>
+          <td style="border: 2px solid #ccc">
             <div class="items">
               <label>Quantity:</label>
-              {{ cartItem.quantity}}
+              {{ cartItem.quantity }}
             </div>
+            <p class="mt-2">
+              Subtotal:
+              {{ cartItem.quantity * cartItem.unitPrice | currency : "USD" }}
+            </p>
+          </td>
+        </tr>
+        <tr style="border: 2px solid #ccc">
+          <td colspan="2"></td>
+          <td style="font-weight: 700;border: 2px solid #ccc;">
+            <p>Total Quantity: {{ totalQuantity }}</p>
+            <p>Shipping: FREE</p>
+            <p>Total Price: {{ totalPrice | currency : "USD" }}</p>
           </td>
         </tr>
       </table>
