--- a/src/app/components/cart-details/cart-details.component.html
+++ b/src/app/components/cart-details/cart-details.component.html
@@ -36,7 +36,7 @@
         </tr>
         <tr style="border: 2px solid #ccc">
           <td colspan="2"></td>
-          <td style="font-weight: 700;border: 2px solid #ccc;">
+          <td style="font-weight: 700; border: 2px solid #ccc">
             <p>Total Quantity: {{ totalQuantity }}</p>
             <p>Shipping: FREE</p>
             <p>Total Price: {{ totalPrice | currency : "USD" }}</p>
