--- a/src/app/components/cart-details/cart-details.component.html
+++ b/src/app/components/cart-details/cart-details.component.html
@@ -1,48 +1,54 @@
 <div class="main-content">
   <div class="section-content section-content-p30">
     <div class="container-fluid">
-      <table
-        class="table table-bordered text-center"
-        style="border: 2px solid #ccc"
-      >
-        <tr style="border: 2px solid #ccc">
-          <th style="width: 20%; border: 2px solid #ccc">Product Image</th>
-          <th style="width: 50%; border: 2px solid #ccc">Product Detail</th>
-          <th style="width: 30%; border: 2px solid #ccc"></th>
-        </tr>
-        <tr *ngFor="let cartItem of cartItems" style="border: 2px solid #ccc">
-          <td style="border: 2px solid #ccc">
-            <img
-              src="{{ cartItem.imageUrl }}"
-              alt="{{ cartItem.name }}.png"
-              class="img-responsive"
-              width="150px"
-            />
-          </td>
-          <td style="border: 2px solid #ccc">
-            <p>{{ cartItem.name }}</p>
-            <p>{{ cartItem.unitPrice | currency : "USD" }}</p>
-          </td>
-          <td style="border: 2px solid #ccc">
-            <div class="items">
-              <label>Quantity:</label>
-              {{ cartItem.quantity }}
-            </div>
-            <p class="mt-2">
-              Subtotal:
-              {{ cartItem.quantity * cartItem.unitPrice | currency : "USD" }}
-            </p>
-          </td>
-        </tr>
-        <tr style="border: 2px solid #ccc">
-          <td colspan="2"></td>
-          <td style="font-weight: 700; border: 2px solid #ccc">
-            <p>Total Quantity: {{ totalQuantity }}</p>
-            <p>Shipping: FREE</p>
-            <p>Total Price: {{ totalPrice | currency : "USD" }}</p>
-          </td>
-        </tr>
-      </table>
+      <!-- display table only if there are items in the cart -->
+      <div *ngIf="cartItems.length > 0">
+        <table
+          class="table table-bordered text-center"
+          style="border: 2px solid #ccc"
+        >
+          <tr style="border: 2px solid #ccc">
+            <th style="width: 20%; border: 2px solid #ccc">Product Image</th>
+            <th style="width: 50%; border: 2px solid #ccc">Product Detail</th>
+            <th style="width: 30%; border: 2px solid #ccc"></th>
+          </tr>
+          <tr *ngFor="let cartItem of cartItems" style="border: 2px solid #ccc">
+            <td style="border: 2px solid #ccc">
+              <img
+                src="{{ cartItem.imageUrl }}"
+                alt="{{ cartItem.name }}.png"
+                class="img-responsive"
+                width="150px"
+              />
+            </td>
+            <td style="border: 2px solid #ccc">
+              <p>{{ cartItem.name }}</p>
+              <p>{{ cartItem.unitPrice | currency : "USD" }}</p>
+            </td>
+            <td style="border: 2px solid #ccc">
+              <div class="items">
+                <label>Quantity:</label>
+                {{ cartItem.quantity }}
+              </div>
+              <p class="mt-2">
+                Subtotal:
+                {{ cartItem.quantity * cartItem.unitPrice | currency : "USD" }}
+              </p>
+            </td>
+          </tr>
+          <tr style="border: 2px solid #ccc">
+            <td colspan="2"></td>
+            <td style="font-weight: 700; border: 2px solid #ccc">
+              <p>Total Quantity: {{ totalQuantity }}</p>
+              <p>Shipping: FREE</p>
+              <p>Total Price: {{ totalPrice | currency : "USD" }}</p>
+            </td>
+          </tr>
+        </table>
+      </div>
+      <div *ngIf="cartItems.length === 0" class="alert alert-primary bg-info col-md-12 text-center text-light" role="alert">
+        Your Shopping Cart is empty
+      </div>
     </div>
   </div>
 </div>
