--- a/src/app/components/cart-details/cart-details.component.html
+++ b/src/app/components/cart-details/cart-details.component.html
@@ -53,8 +53,7 @@
                   <div class="col-8"></div>
                 </div>
               </div>
-              <hr>
-              <button (click)="remove(cartItem)" class="btn btn-primary btn-sm mt-2">Remove</button>
+              <button (click)="remove(cartItem)" class="btn btn-primary btn-sm mt-2 active">Remove</button>
               <p class="mt-2">
                 Subtotal:
                 {{ cartItem.quantity * cartItem.unitPrice | currency : "USD" }}
@@ -67,6 +66,8 @@
               <p>Total Quantity: {{ totalQuantity }}</p>
               <p>Shipping: FREE</p>
               <p>Total Price: {{ totalPrice | currency : "USD" }}</p>
+              <!-- Links to checkout page for payment -->
+              <a routerLink="/checkout" class="btn btn-primary active mb-5">Checkout</a>
             </td>
           </tr>
         </table>
