--- a/src/styles.css
+++ b/src/styles.css
@@ -514,8 +514,9 @@ input.au-input.au-input-xl{
 .header-mobile-2.header-mobile .hamburger .hamburger-box .hamburger-inner::after{
   background:#fff
 }
+/* padding: top right bottom left */
 .main-content.page-m{
-  padding:10% 15%!important
+  padding:10% 30% 10% 5%;
 }
 
 /*
