--- a/src/app/components/checkout-form/checkout-form.component.html
+++ b/src/app/components/checkout-form/checkout-form.component.html
@@ -1,3 +1,52 @@
-<div class="main-content">
-
+<div class="main-content page-m">
+  <div
+    class="section-content section-content-p30 w-100"
+    style="margin-left: 10em"
+  >
+    <div class="container-fluid">
+      <!-- receive formGroup Property from Checkout Form Component -->
+      <form [formGroup]="checkoutFormGroup" action="GET/POST">
+        <!-- customer form group. Name of key in form group -->
+        <div formGroupname="customer" class="form-area">
+          <h3>Customer</h3>
+          <div class="row">
+            <div class="col-md-2">
+              <label>First Name: </label>
+            </div>
+            <div class="col-md-9">
+              <div class="input-space">
+                <input formControlName="firstName" type="text" />
+              </div>
+            </div>
+            <div class="col-md-2">
+              <label>Last Name: </label>
+            </div>
+            <div class="col-md-9">
+              <div class="input-space">
+                <input formControlName="lastName" type="text" />
+              </div>
+            </div>
+            <div class="col-md-2">
+              <label>Email Name: </label>
+            </div>
+            <div class="col-md-9">
+              <div class="input-space">
+                <input formControlName="email" type="text" />
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- submit button -->
+        <div class="text-center">
+          <button
+            type="submit"
+            class="btn btn-info border-light text-light"
+            style="border: 3px solid #ccc!important;"
+          >
+            Purchase
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
 </div>
