--- a/src/app/components/cart-details/cart-details.component.html
+++ b/src/app/components/cart-details/cart-details.component.html
@@ -53,7 +53,12 @@
                   <div class="col-8"></div>
                 </div>
               </div>
-              <button (click)="remove(cartItem)" class="btn btn-primary btn-sm mt-2 active">Remove</button>
+              <button
+                (click)="remove(cartItem)"
+                class="btn btn-primary btn-sm mt-2 active"
+              >
+                Remove
+              </button>
               <p class="mt-2">
                 Subtotal:
                 {{ cartItem.quantity * cartItem.unitPrice | currency : "USD" }}
@@ -67,7 +72,9 @@
               <p>Shipping: FREE</p>
               <p>Total Price: {{ totalPrice | currency : "USD" }}</p>
               <!-- Links to checkout page for payment -->
-              <a routerLink="/checkout" class="btn btn-primary active mb-5">Checkout</a>
+              <a routerLink="/checkout" class="btn btn-primary active mb-5"
+                >Checkout</a
+              >
             </td>
           </tr>
         </table>
