Fixed typo in HTML code

--- a/src/app/components/checkout-form/checkout-form.component.html
+++ b/src/app/components/checkout-form/checkout-form.component.html
@@ -8,7 +8,7 @@
       <!-- When using reactive form, use the ngSubmit property to send data -->
       <form [formGroup]="checkoutFormGroup" (ngSubmit)="onSubmit()">
         <!-- customer form group. Name of key in form group -->
-        <div formGroupname="customer" class="form-area">
+        <div formGroupName="customer" class="form-area">
           <h3>Customer</h3>
           <div class="row">
             <div class="col-md-2">
