--- a/src/app/components/checkout-form/checkout-form.component.html
+++ b/src/app/components/checkout-form/checkout-form.component.html
@@ -96,7 +96,9 @@
             </div>
             <div class="col-md-9">
               <div class="input-space">
-                <input formControlName="country" type="text" />
+                <select formControlName="country">
+                  <option value="North-West">TO DO</option>
+                </select>
               </div>
             </div>
             <div class="col-md-2">
@@ -120,7 +122,9 @@
             </div>
             <div class="col-md-9">
               <div class="input-space">
-                <input formControlName="state" type="text" />
+                <select formControlName="state">
+                  <option value="North-West">TO DO</option>
+                </select>
               </div>
             </div>
             <div class="col-md-2">
