--- a/src/app/components/checkout-form/checkout-form.component.html
+++ b/src/app/components/checkout-form/checkout-form.component.html
@@ -153,7 +153,9 @@
             </div>
             <div class="col-md-9">
               <div class="input-space">
-                <input formControlName="cardType" type="text" />
+                <select formControlName="cardType">
+                  <option value="Savings">TO DO</option>
+                </select>
               </div>
             </div>
             <div class="col-md-2">
@@ -185,7 +187,9 @@
             </div>
             <div class="col-md-9">
               <div class="input-space">
-                <input formControlName="expirationMonth" type="text" />
+                <select formControlName="expirationMonth">
+                  <option value="12">TO DO</option>
+                </select>
               </div>
             </div>
             <div class="col-md-2">
@@ -193,7 +197,9 @@
             </div>
             <div class="col-md-9">
               <div class="input-space">
-                <input formControlName="expirationYear" type="text" />
+                <select formControlName="expirationYear">
+                  <option value="2024">TO DO</option>
+                </select>
               </div>
             </div>
           </div>
