--- a/src/app/components/checkout-form/checkout-form.component.html
+++ b/src/app/components/checkout-form/checkout-form.component.html
@@ -154,7 +154,8 @@
             <div class="col-md-9">
               <div class="input-space">
                 <select formControlName="cardType">
-                  <option value="Savings">TO DO</option>
+                  <option>Visa</option>
+                  <option>MasterCard</option>
                 </select>
               </div>
             </div>
@@ -202,6 +203,15 @@
                 </select>
               </div>
             </div>
+          </div>
+        </div>
+        <!-- Order Review -->
+        <div class="form-area">
+          <h3>Order Review</h3>
+          <div class="row">
+              <p>Total Quantity: {{ totalQuantity }}</p>
+              <p>Shipping: FREE</p>
+              <p>Total Price: {{ totalPrice }}</p>
           </div>
         </div>
         <!-- submit button -->
