--- a/src/app/components/checkout-form/checkout-form.component.html
+++ b/src/app/components/checkout-form/checkout-form.component.html
@@ -225,7 +225,9 @@
             <div class="col-md-9">
               <div class="input-space">
                 <select formControlName="expirationMonth">
-                  <option value="12">TO DO</option>
+                  <option *ngFor="let month of creditCardMonths" [selected]="currentMonth">
+                    {{ month }}
+                  </option>
                 </select>
               </div>
             </div>
@@ -237,7 +239,9 @@
             <div class="col-md-9">
               <div class="input-space">
                 <select formControlName="expirationYear">
-                  <option value="2024">TO DO</option>
+                  <option *ngFor="let year of creditCardYears">
+                    {{ year }}
+                  </option>
                 </select>
               </div>
             </div>
