--- a/src/app/components/checkout-form/checkout-form.component.html
+++ b/src/app/components/checkout-form/checkout-form.component.html
@@ -225,7 +225,7 @@
             <div class="col-md-9">
               <div class="input-space">
                 <select formControlName="expirationMonth">
-                  <option *ngFor="let month of creditCardMonths" [selected]="currentMonth">
+                  <option *ngFor="let month of creditCardMonths">
                     {{ month }}
                   </option>
                 </select>
@@ -238,7 +238,7 @@
             </div>
             <div class="col-md-9">
               <div class="input-space">
-                <select formControlName="expirationYear">
+                <select formControlName="expirationYear" (change)="handleMonthsAndYears()">
                   <option *ngFor="let year of creditCardYears">
                     {{ year }}
                   </option>
