--- a/src/app/components/checkout-form/checkout-form.component.html
+++ b/src/app/components/checkout-form/checkout-form.component.html
@@ -51,7 +51,7 @@
               </div>
               <div class="col-md-9">
                 <div class="input-space">
-                  <select formControlName="country">
+                  <select formControlName="country" (change)="getStates('shippingAddress')">
                     <!-- Use ngValue to pass objects to display -->
                     <option *ngFor="let country of countries" [ngValue]="country">
                       {{ country.name }}
@@ -126,7 +126,7 @@
             </div>
             <div class="col-md-9">
               <div class="input-space">
-                <select formControlName="country">
+                <select formControlName="country" (change)="getStates('billingAddress')">
                   <option *ngFor="let country of countries" [ngValue]="country">
                     {{ country.name }}
                   </option>
