--- a/src/app/components/checkout-form/checkout-form.component.html
+++ b/src/app/components/checkout-form/checkout-form.component.html
@@ -12,7 +12,7 @@
           <h3>Customer</h3>
           <div class="row">
             <div class="col-md-2">
-              <label style="font-weight: 700;">First Name:</label>
+              <label style="font-weight: 700">First Name:</label>
             </div>
             <div class="col-md-9">
               <div class="input-space">
@@ -22,7 +22,7 @@
           </div>
           <div class="row">
             <div class="col-md-2">
-              <label style="font-weight: 700;">Last Name:</label>
+              <label style="font-weight: 700">Last Name:</label>
             </div>
             <div class="col-md-9">
               <div class="input-space">
@@ -32,7 +32,7 @@
           </div>
           <div class="row">
             <div class="col-md-2">
-              <label style="font-weight: 700;">Email:</label>
+              <label style="font-weight: 700">Email:</label>
             </div>
             <div class="col-md-9">
               <div class="input-space">
@@ -44,16 +44,22 @@
         <!-- Shipping Address -->
         <div formGroupName="shippingAddress" class="form-area">
           <div class="row">
-            <h3 style="font-weight: 700;">Shipping Address</h3>
+            <h3 style="font-weight: 700">Shipping Address</h3>
             <div class="row">
               <div class="col-md-2">
-                <label style="font-weight: 700;">Country:</label>
+                <label style="font-weight: 700">Country:</label>
               </div>
               <div class="col-md-9">
                 <div class="input-space">
-                  <select formControlName="country" (change)="getStates('shippingAddress')">
+                  <select
+                    formControlName="country"
+                    (change)="getStates('shippingAddress')"
+                  >
                     <!-- Use ngValue to pass objects to display -->
-                    <option *ngFor="let country of countries" [ngValue]="country">
+                    <option
+                      *ngFor="let country of countries"
+                      [ngValue]="country"
+                    >
                       {{ country.name }}
                     </option>
                   </select>
@@ -62,7 +68,7 @@
             </div>
             <div class="row">
               <div class="col-md-2">
-                <label style="font-weight: 700;">Street:</label>
+                <label style="font-weight: 700">Street:</label>
               </div>
               <div class="col-md-9">
                 <div class="input-space">
@@ -72,7 +78,7 @@
             </div>
             <div class="row">
               <div class="col-md-2">
-                <label style="font-weight: 700;">City:</label>
+                <label style="font-weight: 700">City:</label>
               </div>
               <div class="col-md-9">
                 <div class="input-space">
@@ -82,19 +88,24 @@
             </div>
             <div class="row">
               <div class="col-md-2">
-                <label style="font-weight: 700;">State:</label>
+                <label style="font-weight: 700">State:</label>
               </div>
               <div class="col-md-9">
                 <div class="input-space">
                   <select formControlName="state">
-                    <option value="North-West">TO DO</option>
+                    <option
+                      *ngFor="let state of shippingAddressStates"
+                      [ngValue]="state"
+                    >
+                      {{ state.name }}
+                    </option>
                   </select>
                 </div>
               </div>
             </div>
             <div class="row">
               <div class="col-md-2">
-                <label style="font-weight: 700;">Zip Code:</label>
+                <label style="font-weight: 700">Zip Code:</label>
               </div>
               <div class="col-md-9">
                 <div class="input-space">
@@ -122,11 +133,14 @@
           <h3>Billing Address</h3>
           <div class="row">
             <div class="col-md-2">
-              <label style="font-weight: 700;">Country:</label>
+              <label style="font-weight: 700">Country:</label>
             </div>
             <div class="col-md-9">
               <div class="input-space">
-                <select formControlName="country" (change)="getStates('billingAddress')">
+                <select
+                  formControlName="country"
+                  (change)="getStates('billingAddress')"
+                >
                   <option *ngFor="let country of countries" [ngValue]="country">
                     {{ country.name }}
                   </option>
@@ -136,7 +150,7 @@
           </div>
           <div class="row">
             <div class="col-md-2">
-              <label style="font-weight: 700;">Street:</label>
+              <label style="font-weight: 700">Street:</label>
             </div>
             <div class="col-md-9">
               <div class="input-space">
@@ -146,7 +160,7 @@
           </div>
           <div class="row">
             <div class="col-md-2">
-              <label style="font-weight: 700;">City:</label>
+              <label style="font-weight: 700">City:</label>
             </div>
             <div class="col-md-9">
               <div class="input-space">
@@ -156,19 +170,24 @@
           </div>
           <div class="row">
             <div class="col-md-2">
-              <label style="font-weight: 700;">State:</label>
+              <label style="font-weight: 700">State:</label>
             </div>
             <div class="col-md-9">
               <div class="input-space">
                 <select formControlName="state">
-                  <option value="North-West">TO DO</option>
+                  <option
+                    *ngFor="let state of billingAddressStates"
+                    [ngValue]="state"
+                  >
+                    {{ state.name }}
+                  </option>
                 </select>
               </div>
             </div>
           </div>
           <div class="row">
             <div class="col-md-2">
-              <label style="font-weight: 700;">Zip Code:</label>
+              <label style="font-weight: 700">Zip Code:</label>
             </div>
             <div class="col-md-9">
               <div class="input-space">
@@ -182,7 +201,7 @@
           <h3>Credit Card</h3>
           <div class="row">
             <div class="col-md-2">
-              <label style="font-weight: 700;">Card Type:</label>
+              <label style="font-weight: 700">Card Type:</label>
             </div>
             <div class="col-md-9">
               <div class="input-space">
@@ -195,7 +214,7 @@
           </div>
           <div class="row">
             <div class="col-md-2">
-              <label style="font-weight: 700;">Name on Card:</label>
+              <label style="font-weight: 700">Name on Card:</label>
             </div>
             <div class="col-md-9">
               <div class="input-space">
@@ -205,7 +224,7 @@
           </div>
           <div class="row">
             <div class="col-md-2">
-              <label style="font-weight: 700;">Card Number:</label>
+              <label style="font-weight: 700">Card Number:</label>
             </div>
             <div class="col-md-9">
               <div class="input-space">
@@ -215,7 +234,7 @@
           </div>
           <div class="row">
             <div class="col-md-2">
-              <label style="font-weight: 700;">Security Code:</label>
+              <label style="font-weight: 700">Security Code:</label>
             </div>
             <div class="col-md-9">
               <div class="input-space">
@@ -225,7 +244,7 @@
           </div>
           <div class="row">
             <div class="col-md-2">
-              <label style="font-weight: 700;">Expiration Month:</label>
+              <label style="font-weight: 700">Expiration Month:</label>
             </div>
             <div class="col-md-9">
               <div class="input-space">
@@ -239,11 +258,14 @@
           </div>
           <div class="row">
             <div class="col-md-2">
-              <label style="font-weight: 700;">Expiration Year:</label>
+              <label style="font-weight: 700">Expiration Year:</label>
             </div>
             <div class="col-md-9">
               <div class="input-space">
-                <select formControlName="expirationYear" (change)="handleMonthsAndYears()">
+                <select
+                  formControlName="expirationYear"
+                  (change)="handleMonthsAndYears()"
+                >
                   <option *ngFor="let year of creditCardYears">
                     {{ year }}
                   </option>
@@ -255,7 +277,7 @@
         <!-- Order Review -->
         <div class="form-area">
           <h3>Order Review</h3>
-          <div class="row text-center" style="font-weight: 700;">
+          <div class="row text-center" style="font-weight: 700">
             <p>Total Quantity: {{ totalQuantity }}</p>
             <p>Shipping: FREE</p>
             <p>Total Price: {{ totalPrice }}</p>
