--- a/src/app/components/checkout-form/checkout-form.component.html
+++ b/src/app/components/checkout-form/checkout-form.component.html
@@ -17,6 +17,18 @@
             <div class="col-md-9">
               <div class="input-space">
                 <input formControlName="firstName" type="text" />
+                <!-- Validation: invalid, did the user change it, did the field lose focus -->
+                <div
+                  *ngIf="firstName.invalid && (firstName.dirty || firstName.touched)"
+                  class="alert alert-danger"
+                >
+                  <div *ngIf="firstName.errors.required">
+                    First Name is required
+                  </div>
+                  <div *ngIf="firstName.errors.minLength">
+                    First Name must be at least 2 characters long
+                  </div>
+                </div>
               </div>
             </div>
           </div>
